# fourmizzz_auto_tracker_v2

./: .gitignore  CLAUDE.md  Jenkinsfile  README.md  django.env.example  docker-compose.prod.yml  docker-compose.yml  postgres.env.example  pyproject.toml  rabbitmq.env.example
discord/: main.py  pyproject.toml
docker/: Dockerfile
docker/discord/: Dockerfile
docker/django/: entrypoint.sh  wait-for-postgres.sh
docker/nginx/: default.conf  default.conf copy.template  default.conf.template
tracker/discord_bot/: admin.py  bot.py  forms.py  models.py
tracker/discord_bot/migrations/: 0001_initial.py
tracker/scraper/: admin.py  forms.py  models.py  tasks.py  utils.py  web_agent.py
tracker/scraper/migrations/: 0001_initial.py  0002_alter_fourmizzzcredentials_cookie_session.py  0002_alter_fourmizzzcredentials_server.py  0002_fourmizzzserver_n_scanned_pages.py  0002_precisionsnapshot_hunting_field_diff_and_more.py  0003_alter_fourmizzzserver_username.py  0003_alter_precisionsnapshot_hunting_field_diff_and_more.py  0004_alter_precisionsnapshot_player.py  0004_playertarget_mv.py  0005_alter_precisionsnapshot_player.py
tracker/tracker/: celery.py  settings.py  urls.py
