[tool.poetry]
name = "fourmizzz-auto-tracker-v2"
version = "0.1.0"
description = ""
authors = ["Chris Adam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
selenium = "^4.14.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
engineering-notation = "^0.10.0"
psycopg2 = "^2.9.9"
celery = "^5.3.4"
django-celery-results = "^2.5.1"
django-admin-list-filter-dropdown = "^1.0.3"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
