[tool.poetry]
name = "fourmizzz-auto-tracker-v2"
version = "0.1.0"
description = ""
authors = ["Chris Adam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
psycopg2 = "^2.9.9"
django-admin-list-filter-dropdown = "^1.0.3"
engineering-notation = "^0.10.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
celery = "^5.3.4"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
discord-webhook = "^1.3.0"
gunicorn = "^21.2.0"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
