[project]
name = "fourmizzz-auto-tracker-v2"
version = "0.1.0"
description = ""
authors = [{ name = "Chris Adam" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Django>=4.2.6,<5",
    "psycopg2>=2.9.9,<3",
    "django-admin-list-filter-dropdown>=1.0.3,<2",
    "engineering-notation>=0.10.0,<0.11",
    "requests>=2.31.0,<3",
    "bs4>=0.0.1,<0.0.2",
    "celery>=5.3.4,<6",
    "django-celery-results>=2.5.1,<3",
    "django-celery-beat>=2.5.0,<3",
    "discord-webhook>=1.3.0,<2",
    "gunicorn>=21.2.0,<22",
    "pytz>=2023.3.post1,<2024",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tracker"
namespace = true
